--- a/agijagi/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/agijagi/app/src/main/res/layout/fragment_shopping_list.xml
@@ -7,34 +7,28 @@
     tools:context=".shopping.ShoppingListFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:theme="@style/Theme.AgijagiToolbar"
         android:id="@+id/toolbar_shoppinglist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:theme="@style/Theme.AgijagiToolbar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.checkbox.MaterialCheckBox
+        style="@style/CustomCheckBox"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_shoppinglist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginStart="12dp"
-        android:layout_marginEnd="12dp"
         android:id="@+id/recyclerview_shoppinglist"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/bottomnavigationview_shoppingList"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_shoppinglist" />
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomnavigationview_shoppingList"
-        android:layout_width="match_parent"
-        app:labelVisibilityMode="labeled"
-        android:layout_height="wrap_content"
-        app:itemIconSize="33dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/menu_bottom_navigation" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
