--- a/agijagi/app/src/main/res/layout/fragment_wish_list.xml
+++ b/agijagi/app/src/main/res/layout/fragment_wish_list.xml
@@ -1,28 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".wishlist.WishListFragment">
 
-
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar_wish_list"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:text="@string/hello_blank_fragment" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/wish_list_recyclerview"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_wish_list" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
