--- a/agijagi/app/src/main/res/layout/item_order.xml
+++ b/agijagi/app/src/main/res/layout/item_order.xml
@@ -38,7 +38,7 @@
             android:background="@drawable/imageview_rounded_stroke"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_order_state"
-            app:srcCompat="@drawable/agijagi_logo" />
+            app:srcCompat="@drawable/order_default_image" />
 
         <TextView
             android:id="@+id/textView_order_brand"
@@ -121,12 +121,15 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button"
-            android:layout_width="75dp"
+            android:layout_width="96dp"
             android:layout_height="22dp"
             android:layout_marginTop="12dp"
             android:layout_marginEnd="12dp"
             android:text="1:1 채팅"
             android:textColor="@color/jagi_brown"
+            android:drawableStart="@drawable/order_chat_bubble_20px"
+            android:paddingStart="10dp"
+            android:paddingEnd="6dp"
             android:background="@drawable/narrow_box_rounded_button_stroke"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
