--- a/agijagi/app/src/main/res/layout/fragment_seller_product_detail.xml
+++ b/agijagi/app/src/main/res/layout/fragment_seller_product_detail.xml
@@ -6,10 +6,10 @@
     android:layout_height="match_parent"
     android:background="@color/jagi_ivory"
     android:orientation="vertical"
-    tools:context=".product.ProductDetailFragment">
+    tools:context=".sellermypage.SellerProductDetailFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar_product_detail"
+        android:id="@+id/toolbar_seller_product_detail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.AgijagiToolbar"
@@ -18,7 +18,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,24 +26,24 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageview_product_detail_image1"
+                android:id="@+id/imageview_seller_product_detail_image1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:src="@drawable/product_detail_default_image" />
 
             <TextView
-                android:id="@+id/textview_product_detail_brand"
+                android:id="@+id/textview_seller_product_detail_brand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
                 android:text="브랜드명"
-                android:textSize="14dp"
-                android:textColor="@color/brand_name" />
+                android:textColor="@color/brand_name"
+                android:textSize="14dp" />
 
             <TextView
-                android:id="@+id/textview_product_detail_name"
+                android:id="@+id/textview_seller_product_detail_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -53,7 +53,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textview_product_detail_price"
+                android:id="@+id/textview_seller_product_detail_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -62,14 +62,14 @@
                 android:textSize="14dp" />
 
             <View
-                android:id="@+id/view_product_detail_divider_stick"
+                android:id="@+id/view_seller_product_detail_divider_stick"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:background="@drawable/divider_stick" />
 
             <TextView
-                android:id="@+id/textview_product_detail_info_title"
+                android:id="@+id/textview_seller_product_detail_info_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -79,7 +79,7 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textview_product_detail_info_description"
+                android:id="@+id/textview_seller_product_detail_info_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -87,11 +87,11 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="40dp"
                 android:text="기본적인 블랙 색상의 깔끔한 디자인과 다양한 디자인으로 쓰임이 많은 도자기 그릇입니다. 도자기 재질로 무게감이 있어 안정적으로.."
-                android:textSize="12sp"
-                android:textAlignment="center"/>
+                android:textAlignment="center"
+                android:textSize="12sp" />
 
             <ImageView
-                android:id="@+id/imageview_product_detail_image2"
+                android:id="@+id/imageview_seller_product_detail_image2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -99,7 +99,7 @@
                 android:src="@drawable/product_detail_default_image" />
 
             <ImageView
-                android:id="@+id/imageview_product_detail_image3"
+                android:id="@+id/imageview_seller_product_detail_image3"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="16dp"
@@ -107,7 +107,7 @@
                 android:src="@drawable/product_detail_default_image" />
 
             <ImageView
-                android:id="@+id/imageview_product_detail_image4"
+                android:id="@+id/imageview_seller_product_detail_image4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -115,7 +115,7 @@
                 android:src="@drawable/product_detail_default_image" />
 
             <ImageView
-                android:id="@+id/imageview_product_detail_image5"
+                android:id="@+id/imageview_seller_product_detail_image5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -123,15 +123,15 @@
                 android:src="@drawable/product_detail_default_image" />
 
             <ImageView
-                android:id="@+id/imageview_product_detail_image6"
+                android:id="@+id/imageview_seller_product_detail_image6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:adjustViewBounds="true"
                 android:src="@drawable/product_detail_default_image" />
-
 
         </LinearLayout>
+
     </ScrollView>
 
 </LinearLayout>
