Design: 찜 버튼 xml 변경& 클릭 리스너 추가 #10 찜 버튼 xml 변경 사용자 상품상세정보 화면, 사용자 커스텀 상세정보화면 찜 버튼 클릭 리스너 추가

--- a/agijagi/app/src/main/res/layout/fragment_product_detail.xml
+++ b/agijagi/app/src/main/res/layout/fragment_product_detail.xml
@@ -142,6 +142,7 @@
         android:orientation="horizontal">
 
         <ImageButton
+            android:id="@+id/image_button_product_detail_favorite"
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:layout_marginStart="16dp"
