Design: 구매하기 버튼 옵션 선택 화면과 연결 #10 사용자 상품상세정보 화면 구매하기 버튼 -> 기성품 옵션 선택 화면 사용자 커스텀 상품상세정보 화면 구매하기 버튼 -> 커스텀 옵션 선택 화면

--- a/agijagi/app/src/main/res/layout/fragment_product_detail.xml
+++ b/agijagi/app/src/main/res/layout/fragment_product_detail.xml
@@ -150,6 +150,7 @@
             android:background="@drawable/favorite_pressed_button" />
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_product_detail_purchase"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
